ctowasm/test/samples/error/absent_main.c
int f() {
  int a = 1;
  int x = 10;
}